# smithlab_cpp

./: .Makefile.swp  .clang-format  .clang-tidy  .cppcheck_suppress  .gitignore  CMakeLists.txt  CPPLINT.cfg  FastRead.cpp  FastRead.hpp  FileIterator.cpp  FileIterator.hpp  GenomicRegion.cpp  GenomicRegion.hpp  Makefile  Makefile.am  MappedRead.cpp  MappedRead.hpp  OptionParser.cpp  OptionParser.hpp  QualityScore.cpp  QualityScore.hpp  README.md  RNG.cpp  SAM.cpp  SAM.hpp  SAM2.cpp  SAM2.hpp  autogen.sh  bisulfite_utils.cpp  bisulfite_utils.hpp  chromosome_utils.cpp  chromosome_utils.hpp  cigar_utils.cpp  cigar_utils.hpp  clip_adaptor_from_reads.cpp  clip_adaptor_from_reads.hpp  configure.ac  dna_four_bit.cpp  dna_four_bit.hpp  htslib_wrapper.cpp  (+17 more)
.github/workflows/: source-format-check.yml
